Injecting inequality: blogpost, images. Tweaks to _config.yml, delete footer.html

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,10 @@
 title: "traian-d blog"
-description: >- # this means to ignore newlines until "baseurl:"
+author: ""
+description: >-
   Projects, ideas and comments in machine learning, statistics and software engineering.
-baseurl: ""
 url: "http://traian-d.github.io"
 github_username: "traian-d"
+
 
 # Build settings
 markdown: kramdown
