Better blog description.

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: "traian-d blog"
 author: ""
 description: >-
-  Projects, ideas and comments in machine learning, statistics and software engineering.
+  Things I find interesting.
 url: "http://traian-d.github.io"
 github_username: "traian-d"
 
