--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title:              overthoughts and easy pieces
+description:            
 author:             traian
 url:                "https://traian-d.github.io"
 
