--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:              overthoughts and easy pieces
-description:            
+description:        a blog
 author:             traian
 url:                "https://traian-d.github.io"
 
